# psychic-sniffle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  schwefel.h  sniffle.h
inc/: sniffle.h  taus88.h
inc/hydro/: README.md  hydro.h  math.h
inc/schwefel/: schwefel.h
src/: cpuinfo.h  nselector.h  samplertable.h  sniffle.h  splice.h  taus88.h
src/hydro/: CMakeLists.txt  hydro.h  main.cpp  math.cpp  math.h
src/quadratic/: CMakeLists.txt  main.cpp
src/schwefel/: CMakeLists.txt  main.cpp
